--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,8 @@
 
 @import '../css/content-aswer.css';
 @import '../css/content-buttons.css';
+
+@import '../css/icons.css';
 body{
     background-color:#0D0D0D ;
     margin: 0;
